--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "utf-8"/>
         <title></title>
-        <link rel="stylesheet" href="FOW/Css/style.css">
+        <link rel="stylesheet" href="Css/style.css">
         <style>
             
  
