--- a/index.html
+++ b/index.html
@@ -19,43 +19,57 @@
 
 
         <section>
+            <a class="btn " href="about me/Index.html">
+                <img src="Css/About-me.png" alt="">
+           </a>
+           <a class="btn " href="Desert/Index.html">
+            <img src="Css/Dessert-btn.png" alt="">
+       </a>
+       <a class="btn " href="School Schedule/Index.html">
+        <img src="Css/School-Schedule.png" alt="">
+   </a>
+   <a class="btn " href="Holidays/Holiday">
+    <img src="Css/Holidays.png" alt="">
+</a>
+<a class="btn " href="Top-5/Index.html">
+    <img src="Css/Top-5.png" alt="">
+</a>
+<a class="btn " href="Christmas Treat/Index.html">
+    <img src="Css/Christmas-Treats.png" alt="">
+</a>
+<a class="btn " href="News/Index.html">
+    <img src="Css/News.png" alt="">
+</a>
+<a class="btn " href="Headers/Headers.html">
+    <img src="Css/Headers.png" alt="">
+</a>
+<a class="btn " href="Template-5-aiden sokolosky/Index.html">
+    <img src="Css/Template.png" alt="">
+</a>
+<a class="btn " href="WebDev Cycle Wireframe2/index.html">
+    <img src="Css/Web-Dev.png" alt="">
+</a>
+<a class="btn " href="Hogwarts/index.html">
+    <img src="Css/Hogwarts.png" alt="">
+</a>
+<a class="btn " href="Div-Col/Index.html">
+    <img src="Css/Div-Col.png" alt="">
+</a>
+<a class="btn " href="Hot-take-basic/Index.html">
+    <img src="Css/o.png" alt="">
+</a>
+<a class="btn " href="HTML-versions/Index.html">
+    <img src="Css/HTML-Versions.png" alt="">
+</a>
+<a class="btn " href="Lists/Index.html">
+    <img src="Css/List.png" alt="">
+</a>
+<a class="btn " href="image-padding/Index.html">
+    <img src="Css/Image-padding.png" alt="">
+</a>
 
-        <button href="about me/Index.html" class="button">About me</button>
-        <button  class="button">Dessert</button>
-        <button  class="button">School Schedule</button>
-        <button  class="button">Holdiay</button>
-        <button  class="button">Top-5</button>
-        <button  class="button">Christmas</button>
-        <button  class="button">News</button>
-        <button  class="button">Headers</button>
-        <button  class="button">Template-5</button>
-        <button  class="button">WebDev</button>
-        <button  class="button">Hogwarts</button>
-        <button  class="button">Div-Col</button>
-        <button  class="button">Hot-take-basic</button>
-        <button  class="button">HTML-Versions</button>
-        <button  class="button">List/index.html</button>
-        <button  class="button">image-padding</button>
-        <section class="1">
-            <a class="Button" href="about me/Index.html"></a>
-            <a class="Button" href="Desert/Index.html"></a>
-            <a class="Button" href="School Schedule/Index.html"></a>
-            <a class="Button" href="Holidays/Holiday"></a>
-            <a class="Button" href="Top-5/Index.html"></a>
-            <a class="Button" href="Christmas Treat/Index.html"></a>
-            <a class="Button" href="News/Index.html"></a>
-            <a class="Button" href="Headers/Headers.html"></a>
-            <a class="Button" href="Template-5-aiden sokolosky/Index.html"></a>
-            <a class="Button" href="WebDev Cycle Wireframe2/index.html"></a>
-            <a class="Button" href="Hogwarts/index.html"></a>
-            <a class="Button" href="Div-Col/Index.html"></a>
-            <a class="Button" href="Hot-take-basic/Index.html"></a>
-            <a class="Button" href="HTML-versions/Index.html"></a>
-            <a class="Button" href="Lists/Index.html"></a>
-            <a class="Button" href="image-padding/Index.html"></a>
-        </section>
 
-     <section>
+  
 
         <h3>My name is aiden sokolosky and these are my projects</h3>
         <button> Youtube</button> 
