--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
         <section>
-            <a class="btn " href="about me/Index.html">
+            <a class="btn " href="About-me/Index.html">
                 <img src="Css/About-me.png" alt="">
            </a>
            <a class="btn " href="Desert/Index.html">
